--- a/weather_forecast_script.ipynb
+++ b/weather_forecast_script.ipynb
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "import datetime\n",
     "\n",
-    "api_key = \"2ba3adde85df148b0ed86632635963e6\" \n",
+    "api_key = \"\" \n",
     "url = f\"https://api.openweathermap.org/data/2.5/weather?\"\n",
     "\n",
     "def get_weather_data(city, country):\n",
@@ -123,7 +123,7 @@
     "    conn = psycopg2.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"postgres\",\n",
-    "    password=\"Neha@00281\",\n",
+    "    password=\"\",\n",
     "    port= '5432'\n",
     "    )\n",
     "\n",
